--- a/src/Position.html
+++ b/src/Position.html
@@ -29,11 +29,19 @@
       <!-- Absolutely positioning elements -->
       <div class="static mt-5">
         <!-- Static parent -->
-        <div class="static ..."><p>Static child</p></div>
-        <div class="inline-block ..."><p>Static sibling</p></div>
+        <div class="static ...">
+          <p>Static child</p>
+        </div>
+        <div class="inline-block ...">
+          <p>Static sibling</p>
+        </div>
         <!-- Static parent -->
-        <div class="absolute ..."><p>Absolute child</p></div>
-        <div class="inline-block ..."><p>Static sibling</p></div>
+        <div class="absolute ...">
+          <p>Absolute child</p>
+        </div>
+        <div class="inline-block ...">
+          <p>Static sibling</p>
+        </div>
       </div>
 
       <!-- Fixed positioning elements -->
@@ -55,6 +63,44 @@
             <strong class="float-left">Debra Houston</strong>
           </div>
           <!-- ... -->
+        </div>
+      </div>
+
+      <!-- Sticky positioning elements -->
+      <div class="mt-36">
+        <div>
+          <div class="sticky top-0 mb-4">A</div>
+          <div>
+            <div class="inline-block float-left">
+              <img
+                src="asset/image/people.jpg"
+                alt=""
+                class="h-16 w-16 rounded-full float-left"
+              />
+              <strong class="float-left mt-2 ml-4">Andrew Alfred</strong>
+            </div>
+            <div class="inline-block float-left">
+              <img
+                src="asset/image/people1.jpg"
+                alt=""
+                class="h-16 w-16 rounded-full float-left"
+              />
+              <strong class="float-left mt-2 ml-4">Aisha Houston</strong>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="sticky top-0 mb-4">B</div>
+          <div>
+            <div>
+              <img
+                src="asset/image/people2.jpg"
+                alt=""
+                class="h-16 w-16 rounded-full float-left"
+              />
+              <strong class="float-left mt-2 ml-4">Bob Alfred</strong>
+            </div>
+          </div>
         </div>
       </div>
     </div>
