--- a/src/Top_Right_Bottom_Left.html
+++ b/src/Top_Right_Bottom_Left.html
@@ -1,76 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Top / Right / Bottom / Left</title>
+    <link rel="stylesheet" href="/dist/tailwind.css" />
+  </head>
 
-<head>
- <meta charset="UTF-8" />
- <meta http-equiv="X-UA-Compatible" content="IE=edge" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <title>Top / Right / Bottom / Left</title>
- <link rel="stylesheet" href="/dist/tailwind.css" />
-</head>
+  <body>
+    <!-- Placing a positioned element -->
+    <div class="max-w-6xl mx-auto mt-1 text-center">
+      <!-- Pin to top left corner -->
+      <div class="relative w-32 h-32">
+        <div
+          class="absolute h-16 w-16 top-0 left-0 bg-purple-600 rounded-md shadow-md"
+        >
+          01
+        </div>
+      </div>
+      <!-- Span top edge -->
+      <div class="relative w-32 h-32">
+        <div class="absolute inset-x-0 top-0 h-16 bg-amber-500 rounded-md">
+          02
+        </div>
+      </div>
+      <!-- Pin to top right corner -->
+      <div class="relative w-32 h-32">
+        <div class="absolute top-0 right-0 h-16 w-16 bg-sky-600 rounded-md">
+          03
+        </div>
+      </div>
 
-<body>
+      <!-- Span left edge -->
+      <div class="relative w-32 h-32">
+        <div class="absolute inset-y-0 left-0 w-16 bg-orange-500 rounded-md">
+          04
+        </div>
+      </div>
 
- <!-- Placing a positioned element -->
- <div class="max-w-6xl mx-auto mt-1 text-center">
-  <!-- Pin to top left corner -->
-  <div class="relative w-32 h-32">
-   <div class="absolute h-16 w-16 top-0 left-0 bg-purple-600 rounded-md shadow-md">01
-   </div>
-  </div>
-  <!-- Span top edge -->
-  <div class="relative w-32 h-32">
-   <div class="absolute inset-x-0 top-0 h-16 bg-amber-500 rounded-md">02</div>
-  </div>
-  <!-- Pin to top right corner -->
-  <div class="relative w-32 h-32">
-   <div class="absolute top-0 right-0 h-16 w-16 bg-sky-600 rounded-md">03</div>
-  </div>
+      <!-- Fill entire parent -->
+      <div class="relative w-32 h-32">
+        <div class="absolute inset-0 bg-fuchsia-500 mt-5 rounded-md shadow-lg">
+          05
+        </div>
+      </div>
+      <!-- Span right edge -->
+      <div class="relative w-32 h-32 mt-4">
+        <div class="absolute inset-y-0 right-0 w-16 bg-rose-500 rounded-md">
+          06
+        </div>
+      </div>
 
-  <!-- Span left edge -->
-  <div class="relative w-32 h-32">
-   <div class="absolute inset-y-0 left-0 w-16 bg-orange-500 rounded-md">04</div>
-  </div>
+      <!-- Pin to bottom left corner -->
+      <div class="relative w-32 h-32">
+        <div
+          class="absolute h-16 w-16 bottom-0 left-0 bg-indigo-500 rounded-sm"
+        >
+          07
+        </div>
+      </div>
 
-  <!-- Fill entire parent -->
-  <div class="relative w-32 h-32">
-   <div class="absolute inset-0 bg-fuchsia-500 mt-5 rounded-md shadow-lg">05</div>
-  </div>
-  <!-- Span right edge -->
-  <div class="relative w-32 h-32 mt-4">
-   <div class="absolute inset-y-0 right-0 w-16 bg-rose-500 rounded-md">06</div>
-  </div>
+      <!-- Span bottom edge -->
+      <div class="relative w-32 h-32">
+        <div class="absolute inset-x-0 bottom-0 h-16 bg-cyan-600 rounded-sm">
+          08
+        </div>
+      </div>
 
-  <!-- Pin to bottom left corner -->
-  <div class="relative w-32 h-32">
-   <div class="absolute h-16 w-16 bottom-0 left-0 bg-indigo-500 rounded-sm">07</div>
-  </div>
+      <!-- Pin to bottom right corner -->
+      <div class="relative h-32 w-32">
+        <div
+          class="absolute bottom-0 right-0 h-16 w-16 bg-yellow-500 rounded-sm"
+        >
+          09
+        </div>
+      </div>
+    </div>
 
-  <!-- Span bottom edge -->
-  <div class="relative w-32 h-32">
-   <div class="absolute inset-x-0 bottom-0 h-16 bg-cyan-600 rounded-sm">08</div>
-  </div>
+    <!-- Using negative values -->
+    <div class="max-w-5xl mx-auto mt-1">
+      <div class="relative w-32 h-32">
+        <div
+          class="absolute w-16 h-16 -left-4 -top-4 bg-sky-500 text-center rounded-sm"
+        >
+          01
+        </div>
+      </div>
+    </div>
 
-  <!-- Pin to bottom right corner -->
-  <div class="relative h-32 w-32">
-   <div class="absolute bottom-0 right-0 h-16 w-16 bg-yellow-500 rounded-sm">09</div>
-  </div>
- </div>
-
- <!-- Using negative values -->
- <div class="max-w-5xl mx-auto mt-1">
-  <div class="relative w-32 h-32">
-   <div class="absolute w-16 h-16 -left-4 -top-4 bg-sky-500 text-center rounded-sm">01</div>
-  </div>
- </div>
-
- <!-- Hover, focus, and other states -->
- <div class="max-w-6xl mx-auto mt-1 text-center">
-  <div class="relative w-32 h-32">
-   <div class="absolute top-0 left-0 hover:top-4 bg-amber-500 h-16 w-16 rounded-sm">01</div>
-  </div>
- </div>
-
-</body>
-
+    <!-- Hover, focus, and other states -->
+    <div class="max-w-6xl mx-auto mt-1 text-center">
+      <div class="relative w-32 h-32">
+        <div
+          class="absolute top-0 left-0 hover:top-4 bg-amber-500 h-16 w-16 rounded-sm"
+        >
+          01
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
