--- a/src/Flex_Grow.html
+++ b/src/Flex_Grow.html
@@ -8,6 +8,18 @@
  <link rel="stylesheet" href="/dist/tailwind.css">
 </head>
 <body>
-
+ <div class="max-w-7xl mx-auto mt-1">
+  <div class="flex">
+   <div class="p-4 h-14 w-14 flex-none bg-purple-500 text-center">01</div>
+   <div class="grow h-14 bg-slate-600 text-center">02</div>
+   <div class="w-14 h-14 flex-none bg-indigo-400">03</div>
+  </div>
+  <!-- Don't grow -->
+  <div class="flex mt-1">
+   <div class="grow md:grow-0 h-14 bg-purple-400 p-4">01</div>
+   <div class="grow-0 h-14 bg-slate-300 p-4">02</div>
+   <div class="grow h-14 bg-rose-400 p-4">03</div>
+  </div>
+ </div>
 </body>
 </html>
