--- a/src/Order.html
+++ b/src/Order.html
@@ -4,9 +4,15 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title>Order</title>
+ <link rel="stylesheet" href="/dist/tailwind.css">
 </head>
 <body>
+ <div class="flex justify-between">
+  <div class="h-14 w-14 p-4 bg-rose-400 rounded-md order-last">01</div>
+  <div class="h-14 w-14 p-4 bg-pink-400 rounded-md">02</div>
+  <div class="h-14 w-14 p-4 bg-amber-400 rounded-md">03</div>
+ </div>
 
 </body>
 </html>
