--- a/src/Grid_Column_Start_End.html
+++ b/src/Grid_Column_Start_End.html
@@ -9,6 +9,7 @@
 </head>
 <body>
  <div class="max-w-7xl mx-auto">
+  <!-- Spanning columns -->
   <div class="grid grid-cols-3 gap-4 mt-1">
    <div class="h-25 w-25 bg-fuchsia-400 p-4">01</div>
    <div class="h-25 w-25 bg-emerald-500 p-4">02</div>
@@ -17,6 +18,13 @@
    <div class="h-25 w-25 bg-sky-500 p-4">05</div>
    <div class="h-25 w-25 bg-lime-400 p-4">06</div>
    <div class="col-span-2 h-25 w-25 bg-orange-400 p-4">07</div>
+  </div>
+  <!-- Starting and ending lines -->
+  <div class="grid grid-cols-6 gap-4 mt-2">
+   <div class="col-start-2 col-span-4 bg-teal-700 p-4 text-center">01</div>
+   <div class="col-start-1 col-span-4 col-end-2 p-4 bg-fuchsia-500 text-center">02</div>
+   <div class="col-end-8 col-span-2 bg-amber-500 p-4 text-center">03</div>
+   <div class="col-start-1 col-end-7 bg-yellow-300 p-4 text-center">04</div>
   </div>
  </div>
 </body>
